--- a/src/app/components/liga1/liga1-main/liga1-main.component.html
+++ b/src/app/components/liga1/liga1-main/liga1-main.component.html
@@ -268,7 +268,7 @@
         <p>En la temporada actual, los equipos situados en las <b>2 últimas posiciones</b> al término de la fase regular sufrirán el <b>descenso directo de categoría</b>, relegándolos a participar en la <b>Liga 2</b>.</p>
       </div>
       <div class="col-sm-12 col-md-3">
-        <img class="img-fluid" alt="liga-2" style="width: 450px; border-radius: 30px;" src="https://liga2peru.carrd.co/assets/images/image01.jpg?v98201726126851">
+        <img class="img-fluid relegation-img" alt="liga-2" src="https://liga2peru.carrd.co/assets/images/image01.jpg?v98201726126851">
       </div>
     </div>
   </div>
