--- a/src/app/components/liga1/liga1-main/liga1-main.component.css
+++ b/src/app/components/liga1/liga1-main/liga1-main.component.css
@@ -2,7 +2,7 @@
   height: 50px;
   box-shadow: 0 1px 4px 0 rgb(0 0 0 / 15%);
 }
-.nav-options-bar a{
+.nav-options-bar a {
   color: #646464;
   text-decoration: none;
   font-size: 15px;
@@ -20,11 +20,11 @@
 .nav-options-item-selected {
   border-bottom: 5px solid #d8a928;
 }
-.dropdown-option{
+.dropdown-option {
   height: 50px;
   border-bottom: 5px solid #d8a928;
 }
-.dropdown-option-item:hover{
+.dropdown-option-item:hover {
   background-color: #e0e0e0;
 }
 @media screen and (max-width: 767.5px) {
@@ -53,7 +53,7 @@
 /* ======================================================================================================*/
 /* ==============================================Content=================================================*/
 /* ======================================================================================================*/
-.container-fluid .row{
+.container-fluid .row {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,7 +81,7 @@
   transition: 1s;
   transform: skew(50deg);
 }
-.title{
+.title {
   font-size: 40px;
 }
 .content-block {
@@ -108,7 +108,7 @@
   fill: #851111;
   transition: 0.5s;
 }
-.map-item-active:hover{
+.map-item-active:hover {
   fill: #D8A928;
 }
 .map-item-selected {
@@ -147,17 +147,17 @@
   margin: 0px;
   font-size: 25px;
 }
-.format-item:hover .line2{
+.format-item:hover .line2 {
   width: 90px;
 }
 .format-item div:first-child {
   display: flex;
   justify-content: center;
 }
-.format-item:hover .round{
+.format-item:hover .round {
   color: crimson;
 }
-.round{
+.round {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -179,7 +179,7 @@
     width: 100px;
     margin: 0 auto;
   }
-  .format-item:hover .line2{
+  .format-item:hover .line2 {
     width: 150px;
   }
 }
@@ -207,10 +207,10 @@
 .clasifiers-item:hover .lineS {
   width: 85px;
 }
-.border-L{
+.border-L {
   border-left: 3px solid #c39645;
 }
-.border-S{
+.border-S {
   border-left: 3px solid #1c3791;
 }
 .clasifiers p {
@@ -227,4 +227,8 @@
 .relegation-content {
   color: #ffffff;
   background: #161513;
+}
+.relegation-img {
+  width: 450px;
+  border-radius: 30px;
 }
