--- a/src/app/shared/top-bar/top-bar.component.html
+++ b/src/app/shared/top-bar/top-bar.component.html
@@ -3,15 +3,15 @@
     <div class="col-md-3 col-sm-1"></div>
     <div class="col-md-6 col-sm-10">
       <div class="row">
-        <div class="col top-left">.</div>
+        <div class="col top-left"></div>
         <div class="col top-center text-center">
-          <a href="">
+          <a routerLink="/">
             <img class="main-logo" src="./assets/images/logos/liga-logo.png" alt="main-logo">
           </a>
         </div>
-        <div class="col top-right">.</div>
+        <div class="col top-right"></div>
       </div>
     </div>
-    <div class="col-md-6 col-sm-1"></div>
+    <div class="col-md-3 col-sm-1"></div>
   </div>
 </div>
