--- a/src/app/shared/top-list-teams/top-list-teams.component.css
+++ b/src/app/shared/top-list-teams/top-list-teams.component.css
@@ -3,7 +3,7 @@
   line-height: 60px;
   transition: 0.2s;
 }
-.top-items{
+.top-items {
   display: flex;
   justify-content: space-between;
 }
@@ -14,8 +14,11 @@
 .top-items img:hover {
   transform: scale(1.2);
 }
-.top-club-text{
+.top-club-text {
   min-width: 80px;
+}
+.top-club-icon {
+  font-size: 13px;
 }
 .top-club-text p {
   margin-bottom: 0px;
@@ -35,7 +38,7 @@
   }
 }
 @media screen and (max-width: 768px) {
-  .top-club-text{
+  .top-club-text {
     display: none;
   }
 }
