--- a/src/app/components/liga2/liga2-fixture/liga2-fixture.component.html
+++ b/src/app/components/liga2/liga2-fixture/liga2-fixture.component.html
@@ -1,1 +1,210 @@
-<p>liga2-fixture works!</p>
+<!-- Title -->
+<div class="container-fluid background content-block">
+  <div class="row">
+    <div class="col-10 title">
+      <div class="row">
+        <p class="arrow">HOME<i class="fas fa-chevron-right px-3"></i>LIGA 2<i class="fas fa-chevron-right px-3"></i><span>FIXTURE</span></p>
+      </div>
+      <h1><b>Fixture</b></h1>
+    </div>
+  </div>
+</div>
+<!-- Description -->
+<app-description-league [value]="2"/>
+<!-- Divider -->
+<div class="container-fluid divider"></div>
+<!-- Fixture Regional -->
+<div class="fixture-content container-fluid content-block py-5">
+  <div class="row">
+
+    <!-- Titulo -->
+    <div class="col-md-12 col-lg-10 col-xl-8">
+      <p class="fixture-title">Regional Fecha {{ selectedGroup }}</p>
+      <!-- Selector -->
+      <div class="select">
+        <select class="form-select" [(ngModel)]="selectedFixture">
+          @for (fixture of fixtureIndexNorth; track $index) {
+            <option [value]="fixture">Fecha {{ fixture }}</option>
+          }
+        </select>
+      </div>
+      <div class="line my-4"></div>
+    </div>
+    <!-- Fixture Grupo Norte -->
+    <div class="col-md-12 col-lg-10 col-xl-8">
+      <div class="title-group-fixture text-start">Grupo Norte</div>
+      <div class="line3 my-3"></div>
+      @for (item of matchesByRoundNorth; track $index) {
+        @if (selectedFixture === null || selectedFixture === item.round) {
+          <div class="container-fluid fixture-location">
+            <div class="row">
+              <div class="col-12 text-center">
+                <div class="fixture-location-form "><p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p></div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid my-1 content-block fixture-item-bg">
+            <div class="fixture-row-container">
+              <div class="col fixture-name text-end W-100"><span class="name-team">{{ item.homeTeam.name }}</span><span class="abbreviation-team">{{ item.homeTeam.abbreviation }}</span></div>
+              <div class="col fixture-item"><img [src]="item.homeTeam.image" alt="{{ item.homeTeam.alt }}"></div>
+              <div class="col fixture-item result-bg">{{ item.result.home !== null ? item.result.home : '' }}</div>
+              <div class="col fixture-item result-bg">{{ item.result.away !== null ? item.result.away : '' }}</div>
+              <div class="col fixture-item"><img [src]="item.awayTeam.image" alt="{{ item.awayTeam.alt }}"></div>
+              <div class="col fixture-name text-start W-100"><span class="name-team">{{ item.awayTeam.name }}</span><span class="abbreviation-team">{{ item.awayTeam.abbreviation }}</span></div>
+            </div>
+          </div>
+        }
+      }
+    </div>
+    <!-- Fixture Grupo Sur -->
+    <div class="col-md-12 col-lg-10 col-xl-8">
+      <div class="title-group-fixture text-start">Grupo Sur</div>
+      <div class="line3 my-3"></div>
+      @for (item of matchesByRoundSouth; track $index) {
+        @if (selectedFixture === null || selectedFixture === item.round) {
+          <div class="container-fluid fixture-location">
+            <div class="row">
+              <div class="col-12 text-center">
+                <div class="fixture-location-form "><p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p></div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid my-1 content-block fixture-item-bg">
+            <div class="fixture-row-container">
+              <div class="col fixture-name text-end W-100"><span class="name-team">{{ item.homeTeam.name }}</span><span class="abbreviation-team">{{ item.homeTeam.abbreviation }}</span></div>
+              <div class="col fixture-item"><img [src]="item.homeTeam.image" alt="{{ item.homeTeam.alt }}"></div>
+              <div class="col fixture-item result-bg">{{ item.result.home !== null ? item.result.home : '' }}</div>
+              <div class="col fixture-item result-bg">{{ item.result.away !== null ? item.result.away : '' }}</div>
+              <div class="col fixture-item"><img [src]="item.awayTeam.image" alt="{{ item.awayTeam.alt }}"></div>
+              <div class="col fixture-name text-start W-100"><span class="name-team">{{ item.awayTeam.name }}</span><span class="abbreviation-team">{{ item.awayTeam.abbreviation }}</span></div>
+            </div>
+          </div>
+        }
+      }
+    </div>
+
+  </div>
+</div>
+<!-- Grupos -->
+<div class="container-fluid background content-block">
+  <div class="row title-stages">
+    <div class="col-10">
+      <h1><b>Grupos</b></h1>
+    </div>
+  </div>
+</div>
+<!-- Description -->
+<div class="container-fluid bg-light content-block">
+  <div class="row description-stages">
+    <div class="col-sm-12 col-md-6 text-center">
+      <p class="notes">Grupos Ascenso</p>
+      <b>Equipos ubicados del 1° al 6° lugar</b>
+    </div>
+    <div class="col-sm-12 col-md-6 text-center">
+      <p class="notes">Grupo Descenso</p>
+      <b>Equipos ubicados del 7° al 9° lugar</b>
+    </div>
+  </div>
+</div>
+<!-- Divider -->
+<div class="container-fluid divider"></div>
+<!-- Fixture Grupos -->
+<div class="fixture-content container-fluid content-block py-5">
+  <div class="row">
+
+    <!-- Titulo -->
+    <div class="col-md-12 col-lg-10 col-xl-8">
+      <p class="fixture-title">Grupos Fecha {{ selectedGroup }}</p>
+      <!-- Selector -->
+      <div class="select">
+        <select class="form-select" [(ngModel)]="selectedGroup">
+          @for (fixture of groupIndexGroupA; track $index) {
+            <option [value]="fixture">Fecha {{ fixture }}</option>
+          }
+        </select>
+      </div>
+      <div class="line my-4"></div>
+    </div>
+    <!-- Fixture Grupo A -->
+    <div class="col-md-12 col-lg-10 col-xl-8">
+      <div class="title-group-fixture text-start">Grupo A</div>
+      <div class="line3 my-3"></div>
+      @for (item of matchesByRoundGroupA; track $index) {
+        @if (selectedGroup === null || selectedGroup === item.round) {
+          <div class="container-fluid fixture-location">
+            <div class="row">
+              <div class="col-12 text-center">
+                <div class="fixture-location-form "><p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p></div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid my-1 content-block fixture-item-bg">
+            <div class="fixture-row-container">
+              <div class="col fixture-name text-end W-100"><span class="name-team">{{ item.homeTeam.name }}</span><span class="abbreviation-team">{{ item.homeTeam.abbreviation }}</span></div>
+              <div class="col fixture-item"><img [src]="item.homeTeam.image" alt="{{ item.homeTeam.alt }}"></div>
+              <div class="col fixture-item result-bg">{{ item.result.home !== null ? item.result.home : '' }}</div>
+              <div class="col fixture-item result-bg">{{ item.result.away !== null ? item.result.away : '' }}</div>
+              <div class="col fixture-item"><img [src]="item.awayTeam.image" alt="{{ item.awayTeam.alt }}"></div>
+              <div class="col fixture-name text-start W-100"><span class="name-team">{{ item.awayTeam.name }}</span><span class="abbreviation-team">{{ item.awayTeam.abbreviation }}</span></div>
+            </div>
+          </div>
+        }
+      }
+    </div>
+    <!-- Fixture Grupo B -->
+    <div class="col-md-12 col-lg-10 col-xl-8">
+      <div class="title-group-fixture text-start">Grupo B</div>
+      <div class="line3 my-3"></div>
+      @for (item of matchesByRoundGroupB; track $index) {
+        @if (selectedGroup === null || selectedGroup === item.round) {
+          <div class="container-fluid fixture-location">
+            <div class="row">
+              <div class="col-12 text-center">
+                <div class="fixture-location-form "><p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p></div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid my-1 content-block fixture-item-bg">
+            <div class="fixture-row-container">
+              <div class="col fixture-name text-end W-100"><span class="name-team">{{ item.homeTeam.name }}</span><span class="abbreviation-team">{{ item.homeTeam.abbreviation }}</span></div>
+              <div class="col fixture-item"><img [src]="item.homeTeam.image" alt="{{ item.homeTeam.alt }}"></div>
+              <div class="col fixture-item result-bg">{{ item.result.home !== null ? item.result.home : '' }}</div>
+              <div class="col fixture-item result-bg">{{ item.result.away !== null ? item.result.away : '' }}</div>
+              <div class="col fixture-item"><img [src]="item.awayTeam.image" alt="{{ item.awayTeam.alt }}"></div>
+              <div class="col fixture-name text-start W-100"><span class="name-team">{{ item.awayTeam.name }}</span><span class="abbreviation-team">{{ item.awayTeam.abbreviation }}</span></div>
+            </div>
+          </div>
+        }
+      }
+    </div>
+    <!-- Fixture Grupo Descenso -->
+    <div class="col-md-12 col-lg-10 col-xl-8">
+      <div class="title-group-fixture text-start">Grupo Descenso</div>
+      <div class="line3 my-3"></div>
+      @for (item of matchesByRoundGroupRelegation; track $index) {
+        @if (selectedGroup === null || selectedGroup === item.round) {
+          <div class="container-fluid fixture-location">
+            <div class="row">
+              <div class="col-12 text-center">
+                <div class="fixture-location-form "><p><i class="fas fa-map-marker-alt"></i>&nbsp; {{ item.homeTeam.stadium ? item.homeTeam.stadium : 'Por Definir' }}</p></div>
+              </div>
+            </div>
+          </div>
+          <div class="container-fluid my-1 content-block fixture-item-bg">
+            <div class="fixture-row-container">
+              <div class="col fixture-name text-end W-100"><span class="name-team">{{ item.homeTeam.name }}</span><span class="abbreviation-team">{{ item.homeTeam.abbreviation }}</span></div>
+              <div class="col fixture-item"><img [src]="item.homeTeam.image" alt="{{ item.homeTeam.alt }}"></div>
+              <div class="col fixture-item result-bg">{{ item.result.home !== null ? item.result.home : '' }}</div>
+              <div class="col fixture-item result-bg">{{ item.result.away !== null ? item.result.away : '' }}</div>
+              <div class="col fixture-item"><img [src]="item.awayTeam.image" alt="{{ item.awayTeam.alt }}"></div>
+              <div class="col fixture-name text-start W-100"><span class="name-team">{{ item.awayTeam.name }}</span><span class="abbreviation-team">{{ item.awayTeam.abbreviation }}</span></div>
+            </div>
+          </div>
+        }
+      }
+    </div>
+
+  </div>
+</div>
+<!-- Divider -->
+<div class="container-fluid divider"></div>
