Fix componentes Liga 1

--- a/src/app/components/liga1/liga1-main/liga1-main.component.html
+++ b/src/app/components/liga1/liga1-main/liga1-main.component.html
@@ -51,7 +51,7 @@
       <!-- Info -->
       <div class="col-sm-12 col-md-5 col-lg-7 my-4">
         <div class="title text-start">Equipos</div>
-        <div class="line my-3"></div>
+        <div class="line mb-3"></div>
         <p>En la temporada <b>{{ data && data.Info ? data.Info.temporada : '' }}</b> el número de equipos participantes de la <b>Liga 1</b> es de <b> {{ data && data.Info ? data.Info.equipos : '' }} </b> equipos:</p>
         <div class="text-center" *ngIf="data">
           @for (item of data.Teams; track $index) {
@@ -101,7 +101,7 @@
       <div class="col-sm-12 col-md-5 col-lg-4 vertical-center">
         <div>
           <div class="title">Título Nacional</div>
-          <div class="line my-3"></div>
+          <div class="line mb-3"></div>
           <p>El título de la Liga 1 se definirá con 2 rondas denominadas <b>Apertura</b> y <b>Clausura</b> con las siguientes consideraciones.</p>
           <img class="img-fluid" src="https://img.asmedia.epimg.net/resizer/WGgObp2RSJCwqpTp65q2sHRMBIU=/1472x1104/cloudfront-eu-central-1.images.arcpublishing.com/diarioas/C64XC5QLVFBA5LZB7RKKVOBRLQ.jpg" alt="formato-logo">
         </div>
@@ -154,7 +154,7 @@
     <div class="row">
       <div class="col-sm-12 col-md-11">
         <div class="title">Torneos Conmebol</div>
-        <div class="line my-3"></div>
+        <div class="line mb-3"></div>
         <p>Los cupos a torneos internacionales otorgados a equipos de Perú son 8 y estan divididos de la siguiente forma.</p>
       </div>
       <!-- Copa Libertadores -->
@@ -251,7 +251,7 @@
               <div class="col-10">
                 <p><b>Perú 4</b></p>
                 <div class="lineS"></div>
-                <p>Campeón de la Copa Bicentenario</p>
+                <p>Octavo Lugar de la Liga 1</p>
               </div>
             </div>
           </div>
@@ -264,7 +264,7 @@
     <div class="row">
       <div class="col-sm-12 col-md-5">
         <div class="title">Descenso</div>
-        <div class="line my-3"></div>
+        <div class="line mb-3"></div>
         <p>En la temporada actual, los equipos situados en las <b>2 últimas posiciones</b> al término de la fase regular sufrirán el <b>descenso directo de categoría</b>, relegándolos a participar en la <b>Liga 2</b>.</p>
       </div>
       <div class="col-sm-12 col-md-3">
